@@ -1,6 +1,8 @@
 2003-10-06 Bernhard Held <bernhard@bernhardheld.de>
 
 	* clean.mk: removed '=' in "-maxdepth=1"
+	* src/SDCCloop.c: replace LRKLAUS with SDCC_LRKLAUS
+	* src/SDCClrange.c: replace LRKLAUS with SDCC_LRKLAUS
 
 2003-10-06  Borut Razem <borut.razem@siol.net>
 
